Bug 1814855 - [devtools] Better message layout on narrow console output. r=bomsy.
First, we set the max-width of the message location in percentage
instead of vw, as the console output inline-size can be different
than the viewport one (e.g. when it is in editor mode).
We then turn the media query we had to hide the timestamp into a
container query, again, to take into account editor mode.
Finally, we place the location on its own row when the output is
narrow so the message text itself can still be readable.

Differential Revision: https://phabricator.services.mozilla.com/D168778

UltraBlame original commit: 20b7bd329af341292d38549a7c6d057dfd56ec7c

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -1947,12 +1947,38 @@ padding
 4px
 ;
 }
-media
-(
-max
+/
+*
+Use
+a
+container
+query
+as
+the
+inline
 -
+size
+of
+the
+output
+might
+vary
+when
+the
+console
+is
+in
+editor
+mode
+*
+/
+container
+console
+-
+output
+(
 width
-:
+<
 500px
 )
 {
@@ -1965,6 +1991,246 @@ timestamp
 display
 :
 none
+;
+}
+/
+*
+*
+*
+This
+element
+might
+have
+:
+*
+-
+the
+message
+body
+*
+-
+the
+repeat
+bubble
+*
+-
+the
+location
+*
+*
+What
+we
+want
+here
+is
+to
+display
+the
+location
+one
+its
+own
+line
+at
+the
+bottom
+of
+the
+*
+element
+:
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+|
+Message
+body
+|
+[
+repeat
+]
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+|
+location
+|
+*
++
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
++
+*
+/
+.
+message
+:
+not
+(
+.
+message
+-
+did
+-
+catch
+)
+.
+message
+-
+flex
+-
+body
+:
+not
+(
+.
+error
+-
+note
+)
+{
+display
+:
+grid
+;
+grid
+-
+template
+-
+columns
+:
+1fr
+auto
+;
+row
+-
+gap
+:
+8px
+;
+}
+.
+message
+-
+flex
+-
+body
+.
+message
+-
+location
+{
+max
+-
+width
+:
+unset
+;
+grid
+-
+column
+:
+1
+/
+-
+1
+;
+grid
+-
+row
+:
+2
+;
+justify
+-
+self
+:
+end
 ;
 }
 }
@@ -3063,7 +3329,8 @@ max
 -
 width
 :
-40vw
+40
+%
 ;
 flex
 -
